WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194284
REGRESSION (
r240579
): com.apple.WebKit.WebContent at WebCore: WebCore::Document::absoluteEventRegionForNode
https://bugs.webkit.org/show_bug.cgi?id=194284
Summary
REGRESSION (r240579): com.apple.WebKit.WebContent at WebCore: WebCore::Docume...
Antoine Quint
Reported
2019-02-05 02:51:05 PST
<
rdar://problem/47774298
>
Attachments
Patch
(3.15 KB, patch)
2019-02-05 02:57 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.15 KB, patch)
2019-02-05 04:37 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-02-05 02:57:24 PST
Created
attachment 361180
[details]
Patch
Antoine Quint
Comment 2
2019-02-05 04:37:06 PST
Created
attachment 361182
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2019-02-05 05:17:00 PST
Comment on
attachment 361182
[details]
Patch for landing Clearing flags on attachment: 361182 Committed
r240971
: <
https://trac.webkit.org/changeset/240971
>
WebKit Commit Bot
Comment 4
2019-02-05 05:17:02 PST
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 5
2019-02-06 09:18:34 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug